tests/run/error_bound_unsatisfied.out
tests/run/error_bound_unsatisfied.em:9:12: error: type argument does not satisfy the generic bound
